# Aura

./: .gitignore  AUTO_UPDATE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_NOW.sh  INSTALL.md  LICENSE  ONE_LINER.txt  PRODUCTION_IMPLEMENTATION_PLAN.md  README.md  VPS_DEPLOY.md  aura.md  auto-update.sh  deploy-vps.sh  deploy.sh  install.sh  pyproject.toml  setup-auto-update.sh  setup.py
aura/: __init__.py
aura/ai/: __init__.py  context_client.py
aura/cache/: __init__.py  redis_cache.py
aura/cli/: __init__.py  main.py  scan.py
aura/core/: __init__.py  aav.py  change_detector.py  exceptions.py
aura/guardian/: __init__.py  distributed.py  repairer.py  validator.py
aura/scanners/: README.md  __init__.py  base_scanner.py  cloud_scanner.py  docker_scanner.py  kubernetes_scanner.py  port_scanner.py  process_scanner.py  system_scanner.py  vm_scanner.py
aura/sensors/: __init__.py  base.py  compute_sensor.py  memory_sensor.py  network_sensor.py  services_sensor.py  storage_sensor.py
aura/service/: __init__.py  monitor.py
aura/web/: __init__.py  dashboard.py
